fixed stuff - made recipes look good - fixed hover text to dark green (more visible) - fixed most css files - added button for adding recipes to recipes - fixed search bar in recipes - fixed price in grocery list - removed unnecessary stuff in css files, moved to styles what needed to be moved

--- a/Spizarnia/src/app/components/pages/all-products/all-products.component.css
+++ b/Spizarnia/src/app/components/pages/all-products/all-products.component.css
@@ -3,12 +3,4 @@
   background: linear-gradient(90deg, var(--secondary-left) 0%, var(--secondary-right) 100%);
 }
 
-.all-products-container {
-  position: relative;
-  height: 90vh;
-  width: 150vh;
-  margin-top:82px;
-  background-color: var(--primary-color);
-  overflow: auto;
-  padding: 30px 20px;
-}
+
