--- a/Spizarnia/src/app/components/pages/manage/category/add-category/add-category.component.css
+++ b/Spizarnia/src/app/components/pages/manage/category/add-category/add-category.component.css
@@ -1,4 +1,3 @@
-
 .form-container {
   display: flex;
   flex-direction: column;
@@ -23,37 +22,6 @@
     color: var(--secondary-right);
   }
 
-/* Akordeon */
-mat-accordion {
-  background-color: var(--background-color); 
-  border-radius: 10px;
-  border: 2px solid #54473f;
-  overflow: hidden;
-
-}
-
-mat-expansion-panel {
-  background-color: var(--primary-color);
-  border-bottom: 1px solid var(--background-color); 
-}
-
-mat-expansion-panel-header {
-  background-color: var(--primary-color); /* Jasny brązowy */
-  color: var(--font-color);
-  font-weight: bold;
-}
-
-mat-list-option {
-  font-size: 18px;
-  padding: 10px;
-  color: var(--font-color);
-  border-radius: 5px;
-  background-color: var(--primary-color); /* Tło listy */
-}
-
-  mat-list-option:hover {
-    background-color: #ffffff; /* Kolor podczas hover */
-  }
 
 .emptyWarning {
   font-size: 16px;
@@ -71,18 +39,4 @@ mat-form-field {
   color: var(--secondary-left);
   font-size: 16px;
   margin-top: 5px;
-}
-.mat-raised-button {
-  cursor: pointer;
-  font-size: 18px;
-  color: var(--font-color);
-  padding: 10px;
-  width: 200px;
-  text-align: center;
-  margin-right: 10px;
-  white-space: nowrap;
-  background-color: var(--primary-color);
-  border-radius: 5px;
-  text-transform: uppercase;
-  font-family: "Poppins", "Arial Black";
 }
