--- a/Spizarnia/src/app/components/pages/manage/recipe/recipe.component.css
+++ b/Spizarnia/src/app/components/pages/manage/recipe/recipe.component.css
@@ -1,4 +1,3 @@
-/* Kontener tła, który rozsuwa stronę w dół */
 .background-container {
   position: relative;
   width: 120%;
@@ -50,30 +49,6 @@ mat-accordion {
   overflow: hidden;
 }
 
-mat-expansion-panel {
-  width: 100%;
-  background-color: var(--primary-color);
-  border-bottom: 1px solid var(--background-color);
-}
-
-mat-expansion-panel-header {
-  background-color: var(--primary-color);
-  color: var(--font-color);
-  font-weight: bold;
-}
-
-mat-list-option {
-  font-size: 18px;
-  padding: 10px;
-  color: var(--font-color);
-  border-radius: 5px;
-  background-color: var(--primary-color);
-}
-
-  mat-list-option:hover {
-    background-color: #ffffff;
-  }
-
 .emptyWarning {
   font-size: 16px;
   color: var(--secondary-right);
@@ -91,19 +66,4 @@ mat-form-field {
   color: var(--secondary-left);
   font-size: 16px;
   margin-top: 5px;
-}
-
-.mat-raised-button {
-  cursor: pointer;
-  font-size: 18px;
-  color: var(--font-color);
-  padding: 10px;
-  width: 200px;
-  text-align: center;
-  margin-right: 10px;
-  white-space: nowrap;
-  background-color: var(--primary-color);
-  border-radius: 5px;
-  text-transform: uppercase;
-  font-family: "Poppins", "Arial Black";
 }
